--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Flask==2.3.3
-gunicorn==20.1.0
-requests==2.31.0
-python-dateutil==2.8.2
+Flask==2.0.1
+requests==2.28.1
 google-auth==2.23.0
-google-auth-oauthlib==1.0.0
 google-api-python-client==2.100.0
+python-dateutil==2.8.2
 pytz==2023.3
-apscheduler==3.10.4
+gunicorn==20.1.0
+requests-toolbelt==1.0.0
